updated gems and cleaning up layout issues

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -35,7 +35,7 @@ body
         color: #ddd
   .navbar-inner
     overflow: hidden
-    padding-top: 50px
+    padding-top: 40px
 
 
 .label
